--- a/assets/css/easy-popup.css
+++ b/assets/css/easy-popup.css
@@ -5,8 +5,11 @@
 .easy-popup:not(.open) {opacity:0; visibility:hidden;}
 .easy-popup {
     --easy-popup-heading-height:45px;
+    --easy-popup-top-empty-space:100px; /* on mobile */
     position:fixed; top:0; left:0; width:100%; height:100%; z-index:90;
-    transition:opacity .4s ease, visibility .4s ease; background:rgba(0, 0, 0, .3);
+    transition:opacity .4s ease, visibility .4s ease;
+    background:rgba(0, 0, 0, .3);
+    backdrop-filter:blur(2px);
     display:flex; align-items:center; justify-content:center;
 }
 
@@ -54,9 +57,16 @@
 ****************************/
 @media only screen and (max-width:1023px) {
     .easy-popup {align-items:flex-end;}
-    .easy-popup-overflow {max-height:calc(100% - 100px); overflow:hidden; display:flex; padding-top:var(--easy-popup-heading-height);}
+    .easy-popup-overflow {
+        max-height:calc(100% - var(--easy-popup-top-empty-space)); padding-top:var(--easy-popup-heading-height);
+        overflow:hidden; display:flex;
+    }
     .easy-popup-container {padding:0; overflow:auto; min-height:100%;}
     .easy-popup-close-button {display:none;}
+
+    /* transition */
+    .easy-popup:not(.open) .easy-popup-overflow {transform:translateY(20%);}
+    .easy-popup-overflow {transition:transform .3s ease;}
 
     /* overflow > mobile heading */
     .easy-popup-mobile-heading {display:block;}
