--- a/assets/css/easy-popup.css
+++ b/assets/css/easy-popup.css
@@ -1,21 +1,24 @@
 /****************************
  * Easy Popup
 ****************************/
-/* html */
-html.easy-popup-open {
-    --easy-popup-scrollbar-width:15px;
-    overflow:hidden;
-}
-
-/* visibility */
-.easy-popup:not(.open) {opacity:0; visibility:hidden;}
-.easy-popup {
+/* master */
+html.easy-popup-open {overflow:hidden;}
+html:not(.easy-popup-open) .easy-popup-master {opacity:0; visibility:hidden;}
+.easy-popup-master {
     --easy-popup-heading-height:45px;
     --easy-popup-top-empty-space:100px; /* on mobile */
-    position:fixed; top:0; left:0; width:100%; height:100%; z-index:90;
-    transition:opacity .4s ease, visibility .4s ease;
+    position:fixed; top:0; left:0; width:100%; height:100%; z-index:9999;
     background:rgba(0, 0, 0, .3);
     backdrop-filter:blur(2px);
+    transition:opacity .4s ease, visibility .4s ease;
+}
+
+/* popup */
+.easy-popup:not(.open) {opacity:0; visibility:hidden;}
+.easy-popup {
+    position:absolute; top:0; left:0;
+    height:100%; width:100%;
+    transition:opacity .4s ease, visibility .4s ease;
     display:flex; align-items:center; justify-content:center;
 }
 
