--- a/src/_style.scss
+++ b/src/_style.scss
@@ -3,10 +3,6 @@
  * https://github.com/viivue/easy-popup
  */
 /* master */
-html.easy-popup-open {
-  overflow: hidden;
-}
-
 html:not(.easy-popup-open) .easy-popup-master {
   opacity: 0;
   visibility: hidden;
@@ -164,6 +160,13 @@ html:not(.easy-popup-open) .easy-popup-master {
 
 .easy-popup-close-button:hover svg {
   fill: var(--ep-close-color-hover);
+}
+
+
+/* prevent scroll */
+.ep-prevent-scroll {
+  overflow: hidden;
+  padding-right: var(--ep-scroll-bar-w);
 }
 
 
