--- a/src/css/layout-mobile.scss
+++ b/src/css/layout-mobile.scss
@@ -30,7 +30,7 @@
     }
 
     /* close button */
-    .easy-popup-close-button {
+    .ep-close-button {
       --ep-close-color: #000;
       transform: none;
       position: fixed;
