chore(has-mobile-layout): add class for popup has mobile layout

--- a/src/css/close-button.scss
+++ b/src/css/close-button.scss
@@ -31,6 +31,17 @@
   }
 }
 
+@media only screen and (min-width: 769px) {
+  .ep-close-button.for-mobile-layout {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .ep-close-button.for-mobile-layout .ep-close-button {
+    display: none;
+  }
+}
 
 /* custom close button */
 .easy-popup.ep-has-custom-close-button {
