--- a/src/css/single-popup.scss
+++ b/src/css/single-popup.scss
@@ -24,8 +24,8 @@
   z-index: 2;
   width: 100%;
   max-height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  //overflow-y: auto;
+  //overflow-x: hidden;
 }
 
 /* custom scrollbar */
