--- a/src/_style.scss
+++ b/src/_style.scss
@@ -8,6 +8,7 @@
 @import "./css/close-button";
 @import "./css/theme-right-side";
 @import "./css/layout-mobile";
+@import "./css/corner-layout";
 
 
 /* prevent scroll */
