--- a/src/css/corner-layout.scss
+++ b/src/css/corner-layout.scss
@@ -1,34 +1,108 @@
+html.easy-popup-open:has([data-ep-theme=corner].open) .easy-popup-master {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.easy-popup-master-corner {
+  transition: opacity .4s ease, visibility .4s ease;
+}
+
+.easy-popup-master-corner:has([data-ep-theme=corner]:not(.open)) {
+  pointer-events: none;
+}
+
+.easy-popup-master-corner .easy-popup {
+  position: unset;
+}
+
+[data-ep-theme=corner] {
+  transform: translateX(0);
+}
+
+// Popup close button
+[data-ep-theme=corner] .ep-close-button {
+  --ep-close-color: #000;
+  transform: translate(0);
+}
+
 @media only screen and (min-width: 769px) {
-  [data-ep-theme=corner] {
+  // html.easy-popup-open:has([data-ep-theme=corner]).ep-prevent-scroll  {overflow:auto;}
+
+  .easy-popup-master-corner {
     --ep-max-width: 450px;
-    justify-content: flex-end;
-    align-items: flex-end;
+    max-width: var(--ep-max-width);
+    position: fixed;
+    bottom: 0;
+    right: 0;
   }
 
-  [data-ep-theme=corner] .easy-popup-container .easy-popup-inner .easy-popup-content {
-    border-radius: 0;
-  }
-
+  // Popup container
   [data-ep-theme=corner] .easy-popup-container {
-    padding: 40px 20px 20px;
-    margin: 0 0 0 auto;
+    padding: 0 20px 20px 0;
+  }
+
+  // Animation
+  [data-ep-theme=corner][class*="right"]:not(.open) {
+    transform: translateX(100%);
+  }
+  [data-ep-theme=corner][class*="left"]:not(.open) {
+    transform: translateX(-100%);
   }
 
   // Popup position on the top left side
-  [data-ep-theme=corner].top-left {
-    align-items: flex-start;
+  .easy-popup-master-corner:has([data-ep-theme=corner].top-left) {
+    top: 0;
+    left: 0;
+    bottom: unset;
+    right: unset;
   }
-  [data-ep-theme=corner].top-left .easy-popup-container {
-    margin: 0;
+  .easy-popup-master-corner:has([data-ep-theme=corner].top-left) .easy-popup-container {
+    padding: 20px 0 0 20px;
   }
 
   // Popup position on the top right side
-  [data-ep-theme=corner].top-right {
-    align-items: flex-start;
+  .easy-popup-master-corner:has([data-ep-theme=corner].top-right) {
+    top: 0;
+    right: 0;
+    bottom: unset;
+  }
+  .easy-popup-master-corner:has([data-ep-theme=corner].top-right) .easy-popup-container {
+    padding: 20px 20px 0 0;
   }
 
   // Popup position on the bottom left side
-  [data-ep-theme=corner].bottom-left .easy-popup-container {
-    margin: 0;
+  .easy-popup-master-corner:has([data-ep-theme=corner].bottom-left) {
+    left: 0;
+    right: unset;
+  }
+  .easy-popup-master-corner:has([data-ep-theme=corner].bottom-left) .easy-popup-container {
+    padding: 0 0 20px 20px;
+  }
+
+  // Popup inner
+  [data-ep-theme=corner] .easy-popup-container .easy-popup-inner {
+    border: 1px solid #d0d7de;
+    max-height: calc(100vh - 20px * 2);
+    overflow-y: auto;
+  }
+  [data-ep-theme=corner] .easy-popup-container .easy-popup-inner .easy-popup-content {
+    border-radius: 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .easy-popup-master-corner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background: var(--ep-bg);
+    backdrop-filter: blur(2px);
+  }
+  .easy-popup-master-corner:has([data-ep-theme=corner]:not(.open)) {
+    opacity: 0;
+    visibility: hidden;
   }
 }
