--- a/src/css/corner-layout.scss
+++ b/src/css/corner-layout.scss
@@ -23,13 +23,8 @@ html.easy-popup-open:has(.easy-popup-master-corner.open) .easy-popup-master {
 }
 
 @media only screen and (min-width: 769px) {
-  // html.easy-popup-open:has(.easy-popup-master-corner).ep-prevent-scroll  {overflow:auto;}
-
-  .easy-popup-master-corner.easy-popup {
-
-  }
-
   .easy-popup-master-corner {
+    --ep-offset: 20px;
     --ep-max-width: 450px;
     max-width: var(--ep-max-width);
     position: fixed;
@@ -48,7 +43,7 @@ html.easy-popup-open:has(.easy-popup-master-corner.open) .easy-popup-master {
 
   // Popup container
   .easy-popup-master-corner .easy-popup-container {
-    padding: 0 20px 20px 0;
+    padding: 0;
   }
 
   // Animation
@@ -61,32 +56,38 @@ html.easy-popup-open:has(.easy-popup-master-corner.open) .easy-popup-master {
 
   // Popup position on the top left side
   .easy-popup-master-corner.top-left {
-    top: 0;
-    left: 0;
+    top: var(--ep-offset);
+    left: var(--ep-offset);
     bottom: unset;
     right: unset;
   }
   .easy-popup-master-corner.top-left .easy-popup-container {
-    padding: 20px 0 0 20px;
+    //padding: 20px 0 0 20px;
   }
 
   // Popup position on the top right side
   .easy-popup-master-corner.top-right {
-    top: 0;
-    right: 0;
+    top: var(--ep-offset);
+    right: var(--ep-offset);
     bottom: unset;
   }
   .easy-popup-master-corner.top-right .easy-popup-container {
-    padding: 20px 20px 0 0;
+    //padding: 20px 20px 0 0;
   }
 
   // Popup position on the bottom left side
   .easy-popup-master-corner.bottom-left {
-    left: 0;
+    left: var(--ep-offset);
     right: unset;
   }
   .easy-popup-master-corner.bottom-left .easy-popup-container {
-    padding: 0 0 20px 20px;
+    //padding: 0 0 20px 20px;
+    bottom: var(--ep-offset);
+  }
+
+  .easy-popup-master-corner.bottom-right .easy-popup-container {
+    bottom: var(--ep-offset);
+    right: var(--ep-offset);
   }
 
   // Popup inner
@@ -96,19 +97,20 @@ html.easy-popup-open:has(.easy-popup-master-corner.open) .easy-popup-master {
     overflow-y: auto;
   }
   .easy-popup-master-corner .easy-popup-container .easy-popup-inner .easy-popup-content {
-    border-radius: 0;
+    border-radius: var(--ep-radius);
+    overflow: auto;
   }
 
   // Popup close button
   .easy-popup-master-corner.top-left .ep-close-button {
-    top: 20px;
+    top: var(--ep-offset);
   }
   .easy-popup-master-corner.bottom-right .ep-close-button {
-    right: 20px;
+    right: var(--ep-offset);
   }
   .easy-popup-master-corner.top-right .ep-close-button {
-    top: 20px;
-    right: 20px;
+    top: var(--ep-offset);
+    right: var(--ep-offset);
   }
 }
 
