--- a/src/css/master.scss
+++ b/src/css/master.scss
@@ -6,6 +6,7 @@
   --ep-close-width: 40px;
   --ep-close-color: #fff;
   --ep-close-color-hover: #ef1616;
+  --ep-corner-offset: 20px;
 
   --ep-popup-bg: #fff;
 }
