feat(left-side): add theme left side

--- a/src/_style.scss
+++ b/src/_style.scss
@@ -6,7 +6,7 @@
 @import "./css/master";
 @import "./css/single-popup";
 @import "./css/close-button";
-@import "./css/theme-right-side";
+@import "theme-sides";
 @import "./css/layout-mobile";
 
 
