--- a/src/_style.scss
+++ b/src/_style.scss
@@ -6,7 +6,7 @@
 @import "./css/master";
 @import "./css/single-popup";
 @import "./css/close-button";
-@import "theme-sides";
+@import "./css/theme-sides";
 @import "./css/layout-mobile";
 
 
